--- a/tiny-files.cabal
+++ b/tiny-files.cabal
@@ -17,6 +17,11 @@ library
   hs-source-dirs:      src
   exposed-modules:     Lib
   build-depends:       base >= 4.7 && < 5
+                     , servant-server
+                     , warp
+                     , mtl
+                     , wai-extra
+                     , aeson
   default-language:    Haskell2010
 
 executable tiny-files-exe
