--- a/tiny-files.cabal
+++ b/tiny-files.cabal
@@ -20,8 +20,14 @@ library
                      , servant-server
                      , warp
                      , mtl
+                     , wai
                      , wai-extra
+                     , bytestring
+                     , resourcet
+                     , directory
+                     , filepath
                      , aeson
+                     , text
   default-language:    Haskell2010
 
 executable tiny-files-exe
