--- a/tiny-files.cabal
+++ b/tiny-files.cabal
@@ -17,17 +17,10 @@ library
   hs-source-dirs:      src
   exposed-modules:     Lib
   build-depends:       base >= 4.7 && < 5
-                     , servant-server
-                     , warp
-                     , mtl
-                     , wai
-                     , wai-extra
+                     , scotty
                      , bytestring
-                     , resourcet
-                     , directory
                      , filepath
-                     , aeson
-                     , text
+                     , wai-extra
   default-language:    Haskell2010
 
 executable tiny-files-exe
