--- a/tiny-files.cabal
+++ b/tiny-files.cabal
@@ -21,6 +21,8 @@ library
                      , bytestring
                      , filepath
                      , wai-extra
+                     , aeson
+                     , directory
   default-language:    Haskell2010
 
 executable tiny-files-exe
